--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "homepage": "https://github.com/Outlain/HighRiskEnforcementBack#readme",
   "dependencies": {
-    "netlify-lambda": "^2.0.16",
-    "serverless-http": "^3.2.0"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2"
   }
 }
